--- a/1.1 Package-Catalog-Portfolio-Product.ipynb
+++ b/1.1 Package-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "861c290c",
+   "id": "0cc6175c",
    "metadata": {},
    "source": [
     "# [모듈 1.1] 패키징: 서비스 카탈로그 포트폴리오 및 프러덕트\n",
@@ -10,13 +10,29 @@
     "\n",
     "노트북은 필수 리소스를 생성하기 위한 다음 활동을 안내합니다.\n",
     "\n",
-    "\n",
+    "1. 사전 참고\n",
+    "2. S3 버킷 설정\n",
+    "3. 소스 코드 준비\n",
+    "    - 3.1. Source code zip file 생성\n",
+    "    - 3.2 소스 코드 zip 파일을 S3 버킷에 업로드\n",
+    "4. package-cfn.yaml 배포 파일 확인\n",
+    "5. package-cfn.yaml (CloudFormation 템플릿) 을 배포\n",
+    "    - 최종적으로 아래와 같은 파일을 S3에 업로딩 합니다.\n",
+    "        - amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
+    "            -  카탈로그 포트폴리오, 프러덕트 생성 YAML 파일 \n",
+    "        - amazon-sagemaker-reusable-components/amazon-sagemaker-reusable-components.zip\n",
+    "            - 카탈로그 포트폴리오, 프러덕트 관련된 파일을 압축 함.\n",
+    "        - amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
+    "            - 세이지 메이커 파이프라인 프로젝트 생성 YAML 파일\n",
+    "        - amazon-sagemaker-reusable-components/seed-code/s3-fs-ingestion-v1.0.zip\n",
+    "            - 세이지 메이커 파이프라인 프로젝트 생성시에 CodeCommit에 등록될 소스 코드\n",
+    "        \n",
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b7b44c6",
+   "id": "f57d2e50",
    "metadata": {},
    "source": [
     "# 1. 사전 참고"
@@ -24,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15da0a16",
+   "id": "9d9be0ec",
    "metadata": {},
    "source": [
     "## 1.1 참고: 코드 수정 (원문 대비 변경 사항. 확인하시고 스킵하세요.)\n",
@@ -34,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c649579",
+   "id": "533a5d2e",
    "metadata": {},
    "source": [
     "Before:\n",
@@ -53,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba7abf4",
+   "id": "375b79ee",
    "metadata": {},
    "source": [
     "## 2. S3 버킷 설정\n",
@@ -63,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0f2dcd5a",
+   "id": "9a2ed755",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb79acc",
+   "id": "c842cefc",
    "metadata": {},
    "source": [
     "# 3. 소스 코드 준비"
@@ -99,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cbc3a66",
+   "id": "a54e129a",
    "metadata": {},
    "source": [
     "## 3.1. Source code zip file 생성\n",
@@ -114,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "dc731094",
+   "id": "4cdfe43e",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125e48c2",
+   "id": "21f388be",
    "metadata": {},
    "source": [
     "## 3.2 소스 코드 zip 파일을 S3 버킷에 업로드\n",
@@ -160,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "327d6ad1",
+   "id": "92c3bece",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2bce4a0f",
+   "id": "afe02b9c",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447365ac",
+   "id": "a83559c7",
    "metadata": {},
    "source": [
     "# 4. package-cfn.yaml 배포 파일 확인"
@@ -208,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a281d705",
+   "id": "434c120f",
    "metadata": {},
    "source": [
     "### 4.1 CF 의 Output 확인\n",
@@ -220,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0d067fcb",
+   "id": "c066fea6",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22827ccb",
+   "id": "27b27e07",
    "metadata": {},
    "source": [
     "### 4.2 리소스 확인"
@@ -256,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dcbe095",
+   "id": "15f1f09a",
    "metadata": {},
    "source": [
     "#### StartBuildLambdaExecutionRole 생성\n",
@@ -266,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d05d098c",
+   "id": "36f29419",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5839aea",
+   "id": "6a287309",
    "metadata": {},
    "source": [
     "### 4.3. StartBuildLambda 함수 생성\n",
@@ -319,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8501d750",
+   "id": "df313246",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f99053c",
+   "id": "605a5756",
    "metadata": {},
    "source": [
     "### 4.4. StartBuild 및 CodeBuildServiceRole 생성\n",
@@ -378,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "38a3274d",
+   "id": "d653c974",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f6d99e",
+   "id": "d2a15c1e",
    "metadata": {},
    "source": [
     "### 4.5. CfnTemplatePackageProject 생성\n",
@@ -456,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1f05ea11",
+   "id": "c9b4e3e6",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8137095c",
+   "id": "f95eb3fd",
    "metadata": {},
    "source": [
     "### 4.6. buildspec-package-cfn.yml 확인\n",
@@ -508,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1c2f1026",
+   "id": "68c5f052",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be3cf72",
+   "id": "f4f1667c",
    "metadata": {},
    "source": [
     "### 4.7. package-cfn.sh 확인\n",
@@ -553,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "69338a69",
+   "id": "e53ed787",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cea05dd",
+   "id": "5b2a5c05",
    "metadata": {},
    "source": [
     "# 5. package-cfn.yaml (CloudFormation 템플릿) 을 배포\n",
@@ -711,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b113e6d3",
+   "id": "25d8ce9e",
    "metadata": {},
    "source": [
     "## 5.1. 클라우드 포메이션 실행\n",
@@ -722,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5ea17e71",
+   "id": "0d41f6bf",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e34c5c54",
+   "id": "1b1da143",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d504767e",
+   "id": "7b899e28",
    "metadata": {},
    "source": [
     "## 5.2. CloudFormation 템플릿 실행 결과\n",
@@ -788,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddf616a6",
+   "id": "9d958d23",
    "metadata": {},
    "source": [
     "예시: \n",
@@ -802,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ee6fda",
+   "id": "3f5013ab",
    "metadata": {},
    "source": [
     "## 5.2. package-cfn.yaml (CloudFormation 템플릿) 실행 과정\n",
@@ -811,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d55d65",
+   "id": "b5b022be",
    "metadata": {},
    "source": [
     "![cfn-template.png](img2/cfn-template.png)"
@@ -819,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "079b8e32",
+   "id": "39b52a13",
    "metadata": {},
    "source": [
     "## 5.3. \"package-cfn.sh\" 실행 결과\n",
@@ -857,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b90a145",
+   "id": "ccd09d14",
    "metadata": {},
    "source": [
     "![cfn-template-build-log.png](img2/cfn-template-build-log.png)"
@@ -865,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e850ea2",
+   "id": "4c15b496",
    "metadata": {},
    "source": [
     "## 5.4. S3에 생성된 파일 확인"
@@ -874,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "986d987a",
+   "id": "c20d4338",
    "metadata": {},
    "outputs": [
     {
@@ -894,102 +910,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646d726a",
+   "id": "52a41dc1",
    "metadata": {},
    "source": [
-    "# 6. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
-    "- AmazonSageMakerServiceCatalogProductsLaunchRole 에 필요한 권한 부여\n",
-    "- SageMaker Studio 을 실행하는 역할에 권한 추가"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "3dee1961",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arn:aws:iam::057716757052:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-1H4PBAVHSCZYK\n"
-     ]
-    }
-   ],
-   "source": [
-    "! aws cloudformation describe-stacks \\\n",
-    "    --stack-name {SC_PORTFOLIO_STACK_NAME} \\\n",
-    "    --output text \\\n",
-    "    --query 'Stacks[0].Outputs[?OutputKey==`FSIngestionProductPolicyArn`].OutputValue'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "a212b790",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::057716757052:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-1H4PBAVHSCZYK\n",
-      "\n",
-      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::057716757052:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-1GXCCW2EKN3U9\n",
-      "\n",
-      "SM_EXECUTION_ROLE_NAME : mlops-sagemaker-project-gsmoon\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%sh -s \"{SC_PORTFOLIO_STACK_NAME}\" \n",
-    "\n",
-    "sc_portfolio_stack_name=$1\n",
-    "export SM_SC_FS_INGESTION_POLICY_ARN=$(aws cloudformation describe-stacks \\\n",
-    "    --stack-name $sc_portfolio_stack_name \\\n",
-    "    --output text \\\n",
-    "    --query 'Stacks[0].Outputs[?OutputKey==`FSIngestionProductPolicyArn`].OutputValue')\n",
-    "\n",
-    "echo 'SM_SC_FS_INGESTION_POLICY_ARN' : $SM_SC_FS_INGESTION_POLICY_ARN\n",
-    "    \n",
-    "export SM_EXECUTION_ROLE_POLICY_ARN=$(aws cloudformation describe-stacks \\\n",
-    "    --stack-name $sc_portfolio_stack_name \\\n",
-    "    --output text \\\n",
-    "    --query 'Stacks[0].Outputs[?OutputKey==`AmazonSageMakerExecutionRolePolicyArn`].OutputValue')\n",
-    "\n",
-    "echo ''\n",
-    "echo 'SM_EXECUTION_ROLE_POLICY_ARN' : $SM_EXECUTION_ROLE_POLICY_ARN    \n",
-    "    \n",
-    "export SM_EXECUTION_ROLE_NAME=$(aws cloudformation describe-stacks \\\n",
-    "    --stack-name $sc_portfolio_stack_name \\\n",
-    "    --output text \\\n",
-    "    --query 'Stacks[0].Outputs[?OutputKey==`AmazonSageMakerExecutionRoleName`].OutputValue')\n",
-    "\n",
-    "echo ''\n",
-    "echo 'SM_EXECUTION_ROLE_NAME' : $SM_EXECUTION_ROLE_NAME    \n",
-    "\n",
-    "aws iam attach-role-policy \\\n",
-    "    --role-name AmazonSageMakerServiceCatalogProductsLaunchRole \\\n",
-    "    --policy-arn $SM_SC_FS_INGESTION_POLICY_ARN\n",
-    "\n",
-    "aws iam attach-role-policy \\\n",
-    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
-    "    --policy-arn $SM_EXECUTION_ROLE_POLICY_ARN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3c41e08",
-   "metadata": {},
-   "source": [
-    "# 7. 변수 저장\n",
+    "# 6. 변수 저장\n",
     "- 다음 노트북에서 사용할 변수 저장"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "976c53fe",
+   "id": "923788cc",
    "metadata": {},
    "outputs": [
     {
@@ -1008,16 +939,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4897b8b",
+   "id": "f464c774",
    "metadata": {},
    "source": [
-    "# 8. Next\n",
+    "# 7. Next\n",
     "- 다음 노트북 \"2.1 Deploy-Catalog-Portfolio-Product.ipynb\" 로 이동 하세요."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9713f9a4",
+   "id": "95e86078",
    "metadata": {},
    "source": [
     "---\n",
@@ -1026,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e277a13",
+   "id": "092c002c",
    "metadata": {},
    "source": [
     "## A.1. 클라우드 포메이션 스택 진행 상황, 삭제 및 기타 명령어"
@@ -1035,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7abdcfbd",
+   "id": "cf40bf63",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1332,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "72d139d8",
+   "id": "a5027874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d81dc6",
+   "id": "25e05ddb",
    "metadata": {},
    "source": [
     "## A.2 S3 CLI 관련 명령어"
@@ -1351,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e5667395",
+   "id": "2450be4e",
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "84b2daca",
+   "id": "6a889b9f",
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "460c0048",
+   "id": "3d274f95",
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "264c7ff7",
+   "id": "5315ec8c",
    "metadata": {},
    "source": [
     "## A.3. 클라우드 포메이션 실행시 권한 에러\n",
@@ -1428,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0760c37f",
+   "id": "c807a13c",
    "metadata": {},
    "source": [
     "## A.4. 에러: seed-code/s3-fs-ingestion-v1.0.zip 생성시 전부 아티펙트를 포함하지 않음.\n",
@@ -1463,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e913f4d9",
+   "id": "be7b66ef",
    "metadata": {},
    "outputs": [],
    "source": []
