--- a/2.1 Deploy-Catalog-Portfolio-Product.ipynb
+++ b/2.1 Deploy-Catalog-Portfolio-Product.ipynb
@@ -2,27 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc3773d6",
+   "id": "6b01a6f2",
    "metadata": {},
    "source": [
     "# [모듈 2.1] 카탈로그 포트폴리오 및 프러덕트 배포\n",
-    "# 설치 코드 리포\n",
-    "- https://github.com/aws-samples/amazon-sagemaker-reusable-components/blob/main/package-cfn.md\n",
     "\n",
-    "---\n",
-    "## 필수 권한\n",
-    "- S3FulllAccess\n",
-    "- CloudFullAccess\n",
-    "- IAMCreaterole\n",
-    "- CodeBuildFull\n",
-    "- LambdaFull\n",
-    "- ServiceCatalogFull"
+    "이 노트북은 sm-project-sc-portfolio.yaml 를 배포하여 서비스 카탈로그 포트폴리오 및 프러덕트의 생성을 합니다.\n",
+    "\n",
+    "\n",
+    "1. 카탈로그 프트폴리오 및 프더덕트 CF 확인\n",
+    "    - 1.1 sm-project-sc-portfolio.yaml 파일 다운로드\n",
+    "2. AWS Service Catalog 제품 및 포트폴리오 배포\n",
+    "    - 2.1 클라우드 포메이션 진행 확인\n",
+    "    - 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
+    "3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc5844a",
+   "metadata": {},
+   "source": [
+    "# 0. 기존 변수 로딩"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "82f140eb",
+   "id": "36e03d31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe68a63",
+   "id": "53fc030f",
    "metadata": {},
    "source": [
     "# 1. 카탈로그 프트폴리오 및 프더덕트 CF 확인"
@@ -39,16 +48,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcfc4c5d",
+   "id": "87560a31",
    "metadata": {},
    "source": [
-    "## 1.1 실행할 CF YAML 파일 다운로드 "
+    "## 1.1 sm-project-sc-portfolio.yaml  파일 다운로드 \n",
+    "- 다운로드의 이유는 sm-project-sc-portfolio.yaml 파일의 내용을 확인하기 위해서 임."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc4ac5e7",
+   "id": "1894cd42",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fcae0d",
+   "id": "b65654b2",
    "metadata": {},
    "source": [
     "## 1.2 실행 결과의 Output 확인\n",
@@ -93,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dd2e1e0b",
+   "id": "8a827d9c",
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +164,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb2327e",
+   "id": "e6259032",
    "metadata": {},
    "source": [
-    "## 1.2 CF 파라미터\n",
+    "## 1.2 sm-project-sc-portfolio.yaml 파라미터\n",
     "- SCPortfolioPrincipalRoleArn\n",
     "    - 서비스 카탈로그 제품에 대한 액세스 권한이 부여될 IAM 역할\n",
     "- SCProductLaunchRoleArn\n",
@@ -167,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a96e1a48",
+   "id": "15229b2f",
    "metadata": {},
    "outputs": [
     {
@@ -192,10 +202,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b268e8c",
+   "id": "c821c8f7",
    "metadata": {},
    "source": [
-    "## 1.2 CF 생성될 리소스\n",
+    "## 1.2 sm-project-sc-portfolio.yaml 생성될 리소스\n",
     "- DataScienceAutomationPortfolio\n",
     "    - 이 포트폴리오는 SageMaker Studio용 재사용 가능한 데이터 과학 자동화 구성 요소 모음입니다.\n",
     "- FeatureStoreDataIngestionProduct\n",
@@ -205,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "888c96be",
+   "id": "153ca646",
    "metadata": {},
    "outputs": [
     {
@@ -246,10 +256,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b33999a",
+   "id": "75b0abf0",
    "metadata": {},
    "source": [
-    "## 1.3 이외 CF 생성될 리소스\n",
+    "## 1.3 이외 생성될 리소스\n",
     "- SCPortfolioFeatureStoreDataIngestionProductAssociation\n",
     "- SCPortfolioPrincipleAssociation\n",
     "- SCFeatureStoreDataIngestionProductLaunchRoleConstraint\n",
@@ -260,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ad57513",
+   "id": "f91afed8",
    "metadata": {},
    "outputs": [
     {
@@ -385,29 +395,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "557e13d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "upload: ./sm-project-sc-portfolio.yaml to s3://sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n"
-     ]
-    }
-   ],
-   "source": [
-    "! aws s3 cp sm-project-sc-portfolio.yaml  s3://{bucket}/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml "
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "86479480",
+   "id": "620f3066",
    "metadata": {},
    "source": [
-    "# 2. AWS Service Catalog 제품 포트폴리오 배포\n",
+    "# 2. AWS Service Catalog 제품 및 포트폴리오 배포\n",
     "- 'sm-project-sc-portfolio.yaml' 를 실행하여 카탈로그 포트폴리오 및 프로덕트에 등록하는 과정\n",
     "- 아래와 같은 주요 파라미터가 필요 합니다.\n",
     "```\n",
@@ -425,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c889b71f",
+   "id": "0ac0afda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3cc53b14",
+   "id": "0b0c494d",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2545abd9",
+   "id": "2d6092a2",
    "metadata": {},
    "source": [
     "## 2.1 클라우드 포메이션 진행 확인\n",
@@ -499,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec32e323",
+   "id": "ce7743a0",
    "metadata": {},
    "source": [
     "![cf_deploy_portfolio.png](img2/cf_deploy_portfolio.png)"
@@ -507,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c94701",
+   "id": "4889d779",
    "metadata": {},
    "source": [
     "## 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
@@ -516,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d63cb0b",
+   "id": "be06fe49",
    "metadata": {},
    "source": [
     "![service_catalog.png](img2/service_catalog.png)"
@@ -524,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca6cdd9",
+   "id": "6d18c6da",
    "metadata": {},
    "source": [
     "# 3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
@@ -545,16 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5c47605",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
-   "id": "b6398175",
+   "id": "d493a1ac",
    "metadata": {},
    "outputs": [
     {
@@ -607,16 +591,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c77126d7",
+   "id": "d23ac0c6",
    "metadata": {},
    "source": [
-    "# 4. 노트북 끝\n",
+    "# 4. Next\n",
     "- README 파일로 이동하시고, 아래는 트러블 슈팅시 참고 하세요."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8ce696cc",
+   "id": "9d30ffb9",
    "metadata": {},
    "source": [
     "---\n",
@@ -626,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ca3aa1",
+   "id": "eaa680b6",
    "metadata": {},
    "source": [
     "## A.1. sm-project-sc-portfolio.yaml 스택 실행시 에러\n",
@@ -661,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0131c170",
+   "id": "594c780c",
    "metadata": {},
    "source": [
     "## A.2. 포트폴리오 및 프러덕트 배포시 에러\n",
@@ -672,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4db2d9",
+   "id": "5963b0e9",
    "metadata": {},
    "source": [
     "![error-deploy-portfolio-product.png](img2/error-deploy-portfolio-product.png)"
@@ -681,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2241c79",
+   "id": "1aaedcbe",
    "metadata": {},
    "outputs": [],
    "source": []
