--- a/1.1 Package-Catalog-Portfolio-Product.ipynb
+++ b/1.1 Package-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0cc6175c",
+   "id": "6361c6ea",
    "metadata": {},
    "source": [
     "# [모듈 1.1] 패키징: 서비스 카탈로그 포트폴리오 및 프러덕트\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f57d2e50",
+   "id": "5cba7d82",
    "metadata": {},
    "source": [
     "# 1. 사전 참고"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d9be0ec",
+   "id": "d464518e",
    "metadata": {},
    "source": [
     "## 1.1 참고: 코드 수정 (원문 대비 변경 사항. 확인하시고 스킵하세요.)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533a5d2e",
+   "id": "40fcf59b",
    "metadata": {},
    "source": [
     "Before:\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375b79ee",
+   "id": "ca9540ce",
    "metadata": {},
    "source": [
     "## 2. S3 버킷 설정\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9a2ed755",
+   "id": "21c5f509",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c842cefc",
+   "id": "0e129db0",
    "metadata": {},
    "source": [
     "# 3. 소스 코드 준비"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a54e129a",
+   "id": "c9e9ef3c",
    "metadata": {},
    "source": [
     "## 3.1. Source code zip file 생성\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4cdfe43e",
+   "id": "0c7c3631",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f388be",
+   "id": "76b006a2",
    "metadata": {},
    "source": [
     "## 3.2 소스 코드 zip 파일을 S3 버킷에 업로드\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "92c3bece",
+   "id": "db0abc60",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "afe02b9c",
+   "id": "425faa4f",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83559c7",
+   "id": "d5a9f6ae",
    "metadata": {},
    "source": [
     "# 4. package-cfn.yaml 배포 파일 확인"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434c120f",
+   "id": "abfdeed5",
    "metadata": {},
    "source": [
     "### 4.1 CF 의 Output 확인\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c066fea6",
+   "id": "6f5026f6",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b27e07",
+   "id": "80a09198",
    "metadata": {},
    "source": [
     "### 4.2 리소스 확인"
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15f1f09a",
+   "id": "264dbf13",
    "metadata": {},
    "source": [
     "#### StartBuildLambdaExecutionRole 생성\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "36f29419",
+   "id": "dc698811",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a287309",
+   "id": "701bd32e",
    "metadata": {},
    "source": [
     "### 4.3. StartBuildLambda 함수 생성\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "df313246",
+   "id": "c239882b",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605a5756",
+   "id": "8403374a",
    "metadata": {},
    "source": [
     "### 4.4. StartBuild 및 CodeBuildServiceRole 생성\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d653c974",
+   "id": "960ace81",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a15c1e",
+   "id": "2d4e060a",
    "metadata": {},
    "source": [
     "### 4.5. CfnTemplatePackageProject 생성\n",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c9b4e3e6",
+   "id": "355b59bb",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f95eb3fd",
+   "id": "f177bb44",
    "metadata": {},
    "source": [
     "### 4.6. buildspec-package-cfn.yml 확인\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "68c5f052",
+   "id": "ea8569af",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f1667c",
+   "id": "3d1ccdae",
    "metadata": {},
    "source": [
     "### 4.7. package-cfn.sh 확인\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e53ed787",
+   "id": "941ac0ad",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b2a5c05",
+   "id": "456f93da",
    "metadata": {},
    "source": [
     "# 5. package-cfn.yaml (CloudFormation 템플릿) 을 배포\n",
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25d8ce9e",
+   "id": "f92e0f44",
    "metadata": {},
    "source": [
     "## 5.1. 클라우드 포메이션 실행\n",
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "0d41f6bf",
+   "id": "fa8a788a",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1b1da143",
+   "id": "3800033b",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b899e28",
+   "id": "ddcb4180",
    "metadata": {},
    "source": [
     "## 5.2. CloudFormation 템플릿 실행 결과\n",
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d958d23",
+   "id": "6a25ca22",
    "metadata": {},
    "source": [
     "예시: \n",
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5013ab",
+   "id": "70ccde56",
    "metadata": {},
    "source": [
     "## 5.2. package-cfn.yaml (CloudFormation 템플릿) 실행 과정\n",
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b022be",
+   "id": "5a750ce2",
    "metadata": {},
    "source": [
     "![cfn-template.png](img2/cfn-template.png)"
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b52a13",
+   "id": "b150cb30",
    "metadata": {},
    "source": [
     "## 5.3. \"package-cfn.sh\" 실행 결과\n",
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd09d14",
+   "id": "47a2b63e",
    "metadata": {},
    "source": [
     "![cfn-template-build-log.png](img2/cfn-template-build-log.png)"
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c15b496",
+   "id": "ce4d4543",
    "metadata": {},
    "source": [
     "## 5.4. S3에 생성된 파일 확인"
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c20d4338",
+   "id": "1e6d2a61",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a41dc1",
+   "id": "c59ed115",
    "metadata": {},
    "source": [
     "# 6. 변수 저장\n",
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "923788cc",
+   "id": "40fd5a92",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f464c774",
+   "id": "f9bf202a",
    "metadata": {},
    "source": [
     "# 7. Next\n",
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95e86078",
+   "id": "2f1c4842",
    "metadata": {},
    "source": [
     "---\n",
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092c002c",
+   "id": "01f177e6",
    "metadata": {},
    "source": [
     "## A.1. 클라우드 포메이션 스택 진행 상황, 삭제 및 기타 명령어"
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cf40bf63",
+   "id": "52ad933a",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a5027874",
+   "id": "134742d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25e05ddb",
+   "id": "8ec2543d",
    "metadata": {},
    "source": [
     "## A.2 S3 CLI 관련 명령어"
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2450be4e",
+   "id": "a5020c7f",
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "6a889b9f",
+   "id": "e30f4875",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "3d274f95",
+   "id": "19d3a1bf",
    "metadata": {},
    "outputs": [
     {
@@ -1343,23 +1343,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5315ec8c",
+   "id": "7e5a252d",
    "metadata": {},
    "source": [
     "## A.3. 클라우드 포메이션 실행시 권한 에러\n",
     "- 아래와 같은 필수 권한을 세이지 메이커 노트북을 실행하는 역할에 추가 해주세요.\n",
+    "    - \"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\"\n",
+    "    - \"arn:aws:iam::aws:policy/AmazonS3FullAccess\"\n",
+    "    - \"arn:aws:iam::aws:policy/IAMFullAccess\"        \n",
+    "    - \"arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess\"        \n",
+    "    - \"arn:aws:iam::aws:policy/AWSServiceCatalogAdminFullAccess\"\n",
+    "    - \"arn:aws:iam::aws:policy/AWSCloudFormationFullAccess\"\n",
+    "    - \"arn:aws:iam::aws:policy/AWSLambda_FullAccess\"\n",
     "\n",
-    "- S3FulllAccess\n",
-    "- CloudFullAccess\n",
-    "- IAMCreaterole\n",
-    "- CodeBuildFull\n",
-    "- LambdaFull\n",
-    "- ServiceCatalogFull"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c807a13c",
+   "id": "fdc6b0ae",
    "metadata": {},
    "source": [
     "## A.4. 에러: seed-code/s3-fs-ingestion-v1.0.zip 생성시 전부 아티펙트를 포함하지 않음.\n",
@@ -1394,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7b66ef",
+   "id": "6777ac71",
    "metadata": {},
    "outputs": [],
    "source": []
